# faceclock

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
src/faceclock_backend/: Cargo.toml  faceclock_backend.did
src/faceclock_backend/src/: lib.rs
src/faceclock_frontend/assets/: app.js  index.html  style.css
