[package]
name = "faceclock_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
tract-onnx = "0.22.1"
tract-core = "0.22.1"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
image = "0.25"



